Fixed Cancel button on mobile
Fixed the cancel buttons and tidied up forms

--- a/app/assets/stylesheets/temporary.css.sass
+++ b/app/assets/stylesheets/temporary.css.sass
@@ -1732,6 +1732,18 @@ header .navbar .navbar-collapse ul.nav li a.feedback
     width: 100%
     margin-bottom: 4%
 
+  form#add-memory
+    padding: 0
+    .form-group
+      margin: 0 0 35px 0
+
+    .actions
+      margin-bottom: 0
+      padding-bottom: 15px
+
+      *
+        float: none !important
+
 
 
 /* SCREEN SIZE: MOBILES */
